[package]
name = "js8event"
version = "0.1.0"
authors = ["kyle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
log = "0.4"
log4rs = "1.0.0"
redis = "*"
serde_json = "1.0.*"
